<resources>
    <string name="app_name">crew_cue</string>
    <string name="enter_password">password</string>
    <string name="sign_up">signup\n</string>
    <string name="enter_email">email</string>
    <string name="create_account">create_account</string>
    <string name="app_logo">app_logo</string>
    <string name="login_text">Login</string>
    <string name="login">Login</string>
</resources>